# minihub-pro

./: .gitignore  .gitmodules  GettingStarted.md  README.md  afr_build.sh  get_aws_info.sh
demos/demo_runner/: iot_demo_freertos.c
demos/hello_world/: CMakeLists.txt  hello_world.c
demos/include/: aws_clientcredential.h  aws_clientcredential_keys.h  iot_demo_runner.h
demos/lora_basic_station/: CMakeLists.txt  lora_basic_station_demo.c
demos/mqtt/: iot_demo_mqtt.c
vendors/browan/: manifest.cmake
vendors/browan/boards/tb-300/: CMakeLists.txt  tb-300.cmake
vendors/browan/boards/tb-300/aws_demos/: Makefile  partition-table.csv  sdkconfig  sdkconfig.defaults
vendors/browan/boards/tb-300/aws_demos/application_code/: main.c
vendors/browan/boards/tb-300/aws_demos/application_code/browan_code/amazon-freertos-common/: component.mk
vendors/browan/boards/tb-300/aws_demos/config_files/: aws_demo_config.h  iot_config.h
vendors/browan/boards/tb-300/aws_tests/: Makefile  sdkconfig.defaults
vendors/browan/boards/tb-300/aws_tests/application_code/browan_code/amazon-freertos-tests/: component.mk
vendors/browan/boards/tb-300/components/cmd_browan/: CMakeLists.txt  aws_iot.h  cmd_browan.c  cmd_browan.h  cmd_browan_gpio.c  cmd_browan_gpio.h  cmd_browan_nvs.c  cmd_browan_nvs.h
vendors/browan/boards/tb-300/components/console_app/: CMakeLists.txt  Kconfig
vendors/browan/boards/tb-300/components/console_app/cmd_nvs/: cmd_nvs.c
vendors/browan/boards/tb-300/components/console_app/cmd_system/: cmd_system.c
vendors/browan/boards/tb-300/components/console_app/cmd_wifi/: cmd_wifi.c
vendors/browan/boards/tb-300/components/console_app/main/: cmd_decl.h  console_example_main.c  console_example_main.h
vendors/browan/boards/tb-300/components/esp32-wifi-manager/: CMakeLists.txt  Kconfig
vendors/browan/boards/tb-300/components/esp32-wifi-manager/src/: wifi_manager.c  wifi_manager.h
vendors/browan/boards/tb-300/components/freertos/: component.mk
vendors/browan/boards/tb-300/components/mbedtls/: CMakeLists.txt
vendors/browan/boards/tb-300/components/mbedtls/port/: net_sockets.c
vendors/browan/boards/tb-300/ports/wifi/: iot_wifi.c
vendors/browan/esp-idf/: Kconfig
vendors/browan/esp-idf/components/mdns/: mdns_networking.c
vendors/browan/tools/: cp210x_gpio  esp_detect_uart.py
